syntax = "proto3";
option go_package = "./upvote";

service UpvoteService {
  rpc GetAllUsers(GetAllRequest) returns (GetAllResponse) {}
}

message GetAllRequest {

}

message GetAllResponse {
  string name = 1;
  int64 votes = 2;
  string id = 3;
}